--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/uuid": "^9.0.8",
     "@types/webextension-polyfill": "^0.10.7",
     "copy-webpack-plugin": "^12.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "react-scripts": "5.0.1"
   }
 }
