--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "INLINE_RUNTIME_CHUNK=false craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "package": "(cd build && zip -r ../opencti-browser-extension.zip . -x \"*.DS_Store\" -x \"__MACOSX\")"
   },
   "eslintConfig": {
     "extends": [
