--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,38 +1,39 @@
 {
   "name": "OpenCTI Threat Crawler",
   "description": "Search observables and vulnerabilities in Web content and give context",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "manifest_version": 3,
   "action": {
-    "default_title": "Click to open panel"
+    "default_title": "Click to open panel",
+    "default_icon": {
+      "16": "logo16.png"
+    }
   },
   "icons": {
     "16": "logo16.png",
     "48": "logo48.png",
     "128": "logo128.png"
   },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "firefox-addon@opencti.io"
+    }
+  },
   "background": {
     "service_worker": "./static/js/background.js",
     "scripts" : ["./static/js/background.js", "./static/js/browser-polyfill.js"]
   },
   "side_panel": {
-    "default_path": "index.html",
-    "openPanelOnActionClick": true
+    "default_path": "index.html"
   },
   "sidebar_action": {
     "default_icon": {
       "16": "logo16.png",
-      "32": "logo48.png"
+      "48": "logo48.png"
     },
     "default_title": "OpenCTI Threat Crawler",
     "default_panel": "index.html",
-    "open_at_install":false,
-    "browser_style": true
-  },
-  "browser_action": {
-    "browser_style": true,
-    "default_icon": "logo16.png",
-    "default_title": "Feeds"
+    "open_at_install": false
   },
   "permissions": [
     "activeTab",
