--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@craco/craco": "7.1.0",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@mui/icons-material": "5.15.18",
-    "@mui/material": "5.15.18",
+    "@mui/icons-material": "5.15.21",
+    "@mui/material": "5.15.21",
     "@mui/x-data-grid": "6.20.0",
     "formik": "2.4.6",
     "formik-mui": "5.0.0-alpha.0",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false craco build",
+    "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "(cd build && zip -r ../opencti-browser-extension.zip . -x \"*.DS_Store\" -x \"__MACOSX\")"
@@ -57,8 +57,9 @@
     "@types/react-dom": "18.3.0",
     "@types/uuid": "^9.0.8",
     "@types/webextension-polyfill": "^0.10.7",
+    "ajv": "^8.16.0",
     "copy-webpack-plugin": "^12.0.2",
-    "typescript": "^5.4.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^5.4.5"
   }
 }
